--- a/index.html
+++ b/index.html
@@ -1749,6 +1749,11 @@
           window.open("http://www.forvo.com/word/" + q + "/#de");
           window.open("https://www.verbformen.com/?w=" + q);
           window.open(
+            "https://context.reverso.net/translation/german-arabic/" + q
+          );
+          window.open("https://en.pons.com/translate/german-english/" + q);
+
+          window.open(
             "https://www.google.com.ar/search?q=" +
               q +
               "&tbm=isch&sxsrf=APq-WBssbJU7J1iq4t8j7keWqF78UrNqLw%3A1646579766660&source=hp&biw=1024&bih=625&ei=NtAkYsKhJqnS1sQPwqyNiA0&iflsig=AHkkrS4AAAAAYiTeRix3EVqlfTTBsfYzNDcoDVulgo9X&oq=blus&gs_lcp=CgNpbWcQAxgAMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDIFCAAQgAQyBQgAEIAEMgUIABCABDoKCCMQ7wMQ6gIQJzoHCCMQ7wMQJ1C_DVjQEmDWH2gBcAB4AIABrwOIAfkMkgEDNC00mAEAoAEBqgELZ3dzLXdpei1pbWewAQo&sclient=img"
