--- a/index.html
+++ b/index.html
@@ -1748,9 +1748,7 @@
           window.open("https://www.arabdict.com/en/deutsch-arabisch/" + q);
           window.open("http://www.forvo.com/word/" + q + "/#de");
           window.open("https://www.verbformen.com/?w=" + q);
-          window.open(
-            "https://context.reverso.net/translation/german-arabic/" + q
-          );
+          window.open("https://www.duden.de/suchen/dudenonline/" + q);
           window.open("https://en.pons.com/translate/german-english/" + q);
 
           window.open(
